--- a/abt-us/index.html
+++ b/abt-us/index.html
@@ -56,7 +56,7 @@ Strict quality control measures are followed including HACCP regulations while p
 <br><br>
 From ready to prepare curry cuts, delicious and juicy fish steaks, to crunchy squid rings, if you consider yourself a connoisseur of fine dishes, especially of seafood, then rest assured, Frescamer is your next favorite chef.
 </div>
-  <div class="col-sm-2" ><img src="http://www.smarthubli.com/admin/cate/4.jpg" alt="" ></div>
+  <div class="col-sm-2" ><img src="style/image.jpg" alt="" ></div>
  
 </div>
         </div>
