changes in navbar

--- a/product/index.html
+++ b/product/index.html
@@ -15,7 +15,7 @@
     <title>Products</title>
 </head>
 
-<body style= "background-image: url(../static/assets/fresbg2.jpg">
+<body style="background-image: url(../static/assets/fresbg2.jpg">
 
     <div class="container">
         <div class="fab">
@@ -28,7 +28,16 @@
                 <a href="../">
                     <img src="../static/assets/logo.png" alt="Frescamer" class="logo">
                 </a>
-                <button class="openbtn" onclick="openNav()">☰</button>
+                <div class="navbar-inline">
+                    <ul>
+                        <li><a href="../">Home</a></li>
+                        <li><a href="../product/">Products</a></li>
+                        <li><a href="../recipe/">Recipes</a></li>
+                        <li><a href="../contact/">Contact Us</a></li>
+                        <li><a href="../gallery/">Gallery</a></li>
+                    </ul>
+                </div>
+                <button class="openbtn hidebtn" onclick="openNav()">☰</button>
 
             </div>
 
@@ -61,7 +70,7 @@
         </div>
     </div>
     <div id="box">
-        <div class='bannerImage'><img src='../static/images/s5.jpg' ></div>
+        <div class='bannerImage'><img src='../static/images/s5.jpg'></div>
         <div class="tbox">
             <h1>PRODUCTS</h1>
             <p>We offer a wide range of Products</p>
@@ -75,10 +84,10 @@
             </div>
             <div class="footerDetails" style="grid-area: box2; text-align:center; margin: 10px auto;">
                 <h3>CONTACT</h3><br>
-                <a href="tel:+9865327410" style="text-decoration: none;color: white; font-family: inherit; font-size: 19px;"><i class="fa fa-phone"
-                    aria-hidden="true"></i> 9865327410</a><br><br>
-                <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=info@frescamer.com" style="text-decoration: none;color: white; font-family: inherit; font-size: 19px;"><i class="fa fa-envelope"
-                    aria-hidden="true"></i>  info@frescamer.com</a><br><br><br><br><br></p>
+                <a href="tel:+9865327410" style="text-decoration: none;color: white; font-family: inherit; font-size: 19px;"><i
+                        class="fa fa-phone" aria-hidden="true"></i> 9865327410</a><br><br>
+                <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=info@frescamer.com" style="text-decoration: none;color: white; font-family: inherit; font-size: 19px;"><i
+                        class="fa fa-envelope" aria-hidden="true"></i> info@frescamer.com</a><br><br><br><br><br></p>
             </div>
         </div>
         Frescamer | Powered by Excel 2019
