--- a/services/index.html
+++ b/services/index.html
@@ -26,14 +26,25 @@
 <body>
     <div class="con">
         <div class="fab">
-            <a href="contact/"><i class="fa fa-phone" aria-hidden="true"></i><p>  Contact Us</p></a>
+            <a href="contact/"><i class="fa fa-phone" aria-hidden="true"></i>
+                <p> Contact Us</p>
+            </a>
         </div>
         <div class="topnav">
             <div>
                 <a href="#">
                     <img src="../static/assets/logo.png" alt="Frescamer" class="logo">
                 </a>
-                <button class="openbtn" onclick="openNav()">☰</button>
+                <div class="navbar-inline">
+                    <ul>
+                        <li><a href="../">Home</a></li>
+                        <li><a href="../product/">Products</a></li>
+                        <li><a href="../recipe/">Recipes</a></li>
+                        <li><a href="../contact/">Contact Us</a></li>
+                        <li><a href="../gallery/">Gallery</a></li>
+                    </ul>
+                </div>
+                <button class="openbtn hidebtn" onclick="openNav()">☰</button>
 
             </div>
 
@@ -57,14 +68,16 @@
             <div class="pair">
                 <div class="b1 image"><img src="https://images.unsplash.com/photo-1517245386807-bb43f82c33c4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" class="img-responsive"></div>
                 <div class="b2 t1" id="text">
-                    <h3 class="text-center"><b>One</b></h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores voluptatem nobis praesentium expedita aperiam debitis impedit possimus, numquam porro hic amet illo itaque. Nam harum, eos reiciendis ipsam illum laboriosam.</div>
+                    <h3 class="text-center"><b>One</b></h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores voluptatem nobis praesentium expedita aperiam debitis impedit possimus, numquam porro hic amet illo itaque. Nam harum, eos reiciendis ipsam illum laboriosam.
+                </div>
             </div>
 
             <br><br><br><br>
 
             <div class="pair" id="second">
                 <div class="b1" id="text">
-                    <h3 class="text-center"><b>One</b></h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores voluptatem nobis praesentium expedita aperiam debitis impedit possimus, numquam porro hic amet illo itaque. Nam harum, eos reiciendis ipsam illum laboriosam.</div>
+                    <h3 class="text-center"><b>One</b></h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores voluptatem nobis praesentium expedita aperiam debitis impedit possimus, numquam porro hic amet illo itaque. Nam harum, eos reiciendis ipsam illum laboriosam.
+                </div>
                 <div class="b2 image"><img src="https://images.unsplash.com/photo-1517245386807-bb43f82c33c4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" class="img-responsive"></div>
             </div>
 
@@ -73,7 +86,8 @@
             <div class="pair">
                 <div class="b1 image"><img src="https://images.unsplash.com/photo-1517245386807-bb43f82c33c4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" class="img-responsive"></div>
                 <div class="b2 t1" id="text">
-                    <h3 class="text-center"><b>One</b></h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores voluptatem nobis praesentium expedita aperiam debitis impedit possimus, numquam porro hic amet illo itaque. Nam harum, eos reiciendis ipsam illum laboriosam.</div>
+                    <h3 class="text-center"><b>One</b></h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores voluptatem nobis praesentium expedita aperiam debitis impedit possimus, numquam porro hic amet illo itaque. Nam harum, eos reiciendis ipsam illum laboriosam.
+                </div>
             </div>
 
 
