--- a/contact/index.html
+++ b/contact/index.html
@@ -26,7 +26,16 @@
                 <a href="../">
                     <img src="../static/assets/logo.png" alt="Frescamer" class="logo">
                 </a>
-                <button class="openbtn" onclick="openNav()">☰</button>
+                <div class="navbar-inline">
+                    <ul>
+                        <li><a href="../">Home</a></li>
+                        <li><a href="../product/">Products</a></li>
+                        <li><a href="../recipe/">Recipes</a></li>
+                        <li><a href="../contact/">Contact Us</a></li>
+                        <li><a href="../gallery/">Gallery</a></li>
+                    </ul>
+                </div>
+                <button class="openbtn hidebtn" onclick="openNav()">☰</button>
 
             </div>
 
@@ -43,7 +52,7 @@
         <div class="container">
 
             <div class="pair">
-                <div class="contact_info" style=" font-family: 'Proza Libre', sans-serif;">
+                <div class="contact_info" style="font-family: 'Proza Libre', sans-serif;">
                     <h2>Contact info</h2><small>For further enquiries or clarifications, please contact.... <br><br>
                     </small><a href="tel:+9865327410" style="font-size: 19px;"><i class="fa fa-phone"
                             aria-hidden="true"></i> 9865327410</a><br><br>
@@ -51,7 +60,7 @@
                             aria-hidden="true"></i>info@frescamer.com</a><br><br>
                     <a href="https://www.google.com/maps/place/Model+Engineering+College/@10.0283637,76.3263237,17z/data=!3m1!4b1!4m5!3m4!1s0x3b080c5006491601:0xcf23e14245d4694d!8m2!3d10.0283637!4d76.3285124" style="font-size: 19px;" style="font-size: 19px;"><i class="fa fa-map-marker"
                             aria-hidden="true"></i>
-                            <p>Rajkamal Palakal,<br>Nettepadam lane,<br>Kochi-682016<br>Kerala, India<br><br><br></p>
+                        <p>Rajkamal Palakal,<br>Nettepadam lane,<br>Kochi-682016<br>Kerala, India<br><br><br></p>
                     </a><br><br>
                     <div class="order">
                         <p>Order Now</p>
@@ -77,10 +86,11 @@
                     </div>
                     <div class="footerDetails" style="grid-area: box2; text-align:center; margin: 10px auto;">
                         <h3>CONTACT</h3><br>
-                        <a href="tel:+9865327410" style="text-decoration: none;color: white; font-family: inherit; font-size: 19px;"><i class="fa fa-phone"
-                            aria-hidden="true"></i> 9865327410</a><br><br>
-                        <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=info@frescamer.com" style="text-decoration: none;color: white; font-family: inherit; font-size: 19px;"><i class="fa fa-envelope"
-                            aria-hidden="true"></i>  info@frescamer.com</a><br><br><br><br><br></p>
+                        <a href="tel:+9865327410" style="text-decoration: none;color: white; font-family: inherit; font-size: 19px;"><i
+                                class="fa fa-phone" aria-hidden="true"></i> 9865327410</a><br><br>
+                        <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=info@frescamer.com" style="text-decoration: none;color: white; font-family: inherit; font-size: 19px;"><i
+                                class="fa fa-envelope" aria-hidden="true"></i>
+                            info@frescamer.com</a><br><br><br><br><br></p>
                     </div>
                 </div>
                 Frescamer | Powered by Excel 2019
