--- a/index.html
+++ b/index.html
@@ -37,15 +37,24 @@
     <div class="container">
         <div class="fab">
             <a href="contact/"><i class="fa fa-phone" aria-hidden="true"></i>
-                <p id= "mobi" >Contact Us</p>
+                <p id="mobi">Contact Us</p>
             </a>
         </div>
         <div class="topnav">
             <div>
-                <a href="">
-                    <img src="static/assets/logo.png" alt="Frescamer" class="logo">
-                </a>
-                <button class="openbtn" onclick="openNav()">☰</button>
+                <!-- <a href=""> -->
+                <img src="static/assets/logo.png" alt="Frescamer" class="logo">
+                <!-- </a> -->
+                <div class="navbar-inline">
+                    <ul>
+                        <li><a href="">Home</a></li>
+                        <li><a href="product/">Products</a></li>
+                        <li><a href="recipe/">Recipes</a></li>
+                        <li><a href="contact/">Contact Us</a></li>
+                        <li><a href="gallery/">Gallery</a></li>
+                    </ul>
+                </div>
+                <button class="openbtn hidebtn" onclick="openNav()">☰</button>
 
             </div>
         </div>
@@ -112,10 +121,10 @@
                 </div>
                 <div class="footerDetails" style="grid-area: box2; text-align:center; margin: 10px auto;">
                     <h3>CONTACT</h3><br>
-                    <a href="tel:+9865327410" style="text-decoration: none;color: white; font-family: inherit; font-size: 19px;"><i class="fa fa-phone"
-                        aria-hidden="true"></i> 9865327410</a><br><br>
-                    <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=info@frescamer.com" style="text-decoration: none;color: white; font-family: inherit; font-size: 19px;"><i class="fa fa-envelope"
-                        aria-hidden="true"></i>  info@frescamer.com</a><br><br><br></p>
+                    <a href="tel:+9865327410" style="text-decoration: none;color: white; font-family: inherit; font-size: 19px;"><i
+                            class="fa fa-phone" aria-hidden="true"></i> 9865327410</a><br><br>
+                    <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=info@frescamer.com" style="text-decoration: none;color: white; font-family: inherit; font-size: 19px;"><i
+                            class="fa fa-envelope" aria-hidden="true"></i> info@frescamer.com</a><br><br><br></p>
                 </div>
             </div>
             Frescamer | Powered by Excel 2019
