changes in about-us page

--- a/product/index.html
+++ b/product/index.html
@@ -33,6 +33,7 @@
                         <li><a href="../">Home</a></li>
                         <li><a href="../product/">Products</a></li>
                         <li><a href="../recipe/">Recipes</a></li>
+                        <li><a href="../about/">About Us</a></li>
                         <li><a href="../contact/">Contact Us</a></li>
                         <li><a href="../gallery/">Gallery</a></li>
                     </ul>
@@ -49,6 +50,7 @@
         <a href="../">Home</a>
         <a href="../product/">Products</a>
         <a href="../recipe/">Recipes</a>
+        <a href="../about/">About Us</a>
         <a href="../contact/">Contact Us</a>
         <a href="../gallery/">Gallery</a>
 
@@ -70,11 +72,16 @@
         </div>
     </div>
     <div id="box">
-        <div class='bannerImage'><img src='../static/images/s5.jpg'></div>
-        <div class="tbox">
+        <div class='bannerImage overlay'><img src='../static/images/s5.jpg'>
+            <div class="centered">
+                <h1>PRODUCTS</h1>
+            </div>
+        </div>
+        <br><br><br><br>
+        <!--<div class="tbox">
             <h1>PRODUCTS</h1>
             <p>We offer a wide range of Products</p>
-        </div>
+        </div> -->
     </div>
     <div class="footer">
         <div class="pair">
