--- a/recipe/index.html
+++ b/recipe/index.html
@@ -33,6 +33,7 @@
                         <li><a href="../">Home</a></li>
                         <li><a href="../product/">Products</a></li>
                         <li><a href="../recipe/">Recipes</a></li>
+                        <li><a href="../about/">About Us</a></li>
                         <li><a href="../contact/">Contact Us</a></li>
                         <li><a href="../gallery/">Gallery</a></li>
                     </ul>
@@ -48,6 +49,7 @@
             <a href="../">Home</a>
             <a href="../product/">Products</a>
             <a href="../recipe/">Recipes</a>
+            <a href="../about/">About Us</a>
             <a href="../contact/">Contact Us</a>
             <a href="../gallery/">Gallery</a>
 
@@ -62,19 +64,24 @@
             <div class="prod-main">
                 <div class="prodEtail-main">
                     <p id="proName-main"></p>
-                    <p class="price-main">&#8377 <span style="font-size: 30px;" id="rate"></span>
-                    </p>
+                    <!-- <p class="price-main">&#8377 <span style="font-size: 30px;" id="rate"></span>
+                    </p>  -->
                     <div id="star-main"></div>
                     <p id="disp-main"></p>
                 </div>
             </div>
         </div>
         <div id="box">
-            <div class='bannerImage'><img src='../static/images/s1.jpg'></div>
-            <div class="tbox">
+            <div class='bannerImage overlay'><img src='../static/images/s1.jpg'>
+                <div class="centered">
+                    <h1>RECIPES</h1>
+                </div>
+            </div>
+            <br><br><br><br>
+            <!-- <div class="tbox">
                 <h1>RECIPES</h1>
                 <p>A wide range of Recipes can be prepared from our Products</p>
-            </div>
+            </div> -->
         </div>
         <div class="footer">
             <div class="pair">
