--- a/contact/index.html
+++ b/contact/index.html
@@ -31,6 +31,7 @@
                         <li><a href="../">Home</a></li>
                         <li><a href="../product/">Products</a></li>
                         <li><a href="../recipe/">Recipes</a></li>
+                        <li><a href="../about/">About Us</a></li>
                         <li><a href="../contact/">Contact Us</a></li>
                         <li><a href="../gallery/">Gallery</a></li>
                     </ul>
@@ -45,6 +46,7 @@
             <a href="../">Home</a>
             <a href="../product/">Products</a>
             <a href="../recipe/">Recipes</a>
+            <a href="../about/">About Us</a>
             <a href="../contact/">Contact Us</a>
             <a href="../gallery/">Gallery</a>
 
