--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
                     <div class="card-deck">
                         <div class="card col-sm-3" style="background-color:transparent; margin: 20px 0px 50px 0px;"><img src="./static/images/1.png" width="90" height="90" /><br><br>
                             <!-- <h1 id="cursive">Stay Clean, Stay Green</h1> -->
-                            Sustainable and eco-friendly practices are used in order to minimise the impact on the environment.</div>
+                            Sustainable and eco-friendly practices are used in order to minimise the impact on the environment.
+                        </div>
                         <div class="card col-sm-3" style="background-color:transparent; margin: 20px 0px 50px 0px;"><img src="./static/images/2.png" width="90" height="90" /><br><br>
                             <!-- <h1 id="cursive">Safe and reliable</h1> -->
                             The food we bring to your plates is packaged in 100% tried and tested food grade packaging.
