--- a/about/index.html
+++ b/about/index.html
@@ -19,7 +19,7 @@
 
 </head>
 
-<body>
+<body style="background-image: url(../static/assets/fresbg2.jpg">
     <div class="container">
         <div class="fab">
             <a href="../contact/"><i class="fa fa-phone" aria-hidden="true"></i>
