added a link to the order now btn

--- a/contact/index.html
+++ b/contact/index.html
@@ -65,7 +65,7 @@
                         <p>Rajkamal Palakal,<br>Nettepadam lane,<br>Kochi-682016<br>Kerala, India<br><br><br></p>
                     </a><br><br>
                     <div class="order">
-                        <p>Order Now</p>
+                          <a href="https://docs.google.com/forms/d/e/1FAIpQLSeNGTP-bFjNvQOtyKkEkmGJMwsUVYH1IrROEZyC0hu6ypxwrQ/viewform?usp=sf_link"><p style="color: white">Order Now</p></a>
 
                     </div>
 
