changed the look of abt us section

--- a/about/index.html
+++ b/about/index.html
@@ -15,8 +15,6 @@
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-
-
 </head>
 
 <body style="background-image: url(../static/assets/fresbg2.jpg">
@@ -58,22 +56,26 @@
 
         </div>
 
-        <br><br><br><br>
-        <div class="tbox">
-            <br>
-            <h1> <b>We are Frescamer </b>
+        <br>
+        <br>
+        <br>
+        <br>
+
+        <br>
+        <div class="row">
+            <div id="main">
+
+                <h1 style="text-align: center"> <b>We are Frescamer </b>
             </h1>
 
-            <div>
-                <div><img src="style/image.jpg" class="imgSide" alt="">
-                    <div class="about-content">We at Frescamer believe that each and every one of you deserve the very best when it comes to flavour, freshness and quality. World class facilities process and preserve the seafood so as to ensure that each and every one of our products
-                        are export quality, which is the best quality of food you would find in the market. Strict quality control measures are followed including HACCP regulations while processing, as well as quick freezing for the seafood to retain
-                        freshness. With our fully cleaned out and cut pieces, all you need to do is throw them onto the frying pan, sprinkle some herbs and simply relish the assorted and wondrous flavours of the ocean.
-                        <br><br> From ready to prepare curry cuts, delicious and juicy fish steaks, to crunchy squid rings, if you consider yourself a connoisseur of fine dishes, especially of seafood, then rest assured, Frescamer is your next favorite
-                        chef.
+                <div>
+                    <div><img src="style/image.jpg" class="imgSide" alt="">
+
+                        <p>We at Frescamer believe that each and every one of you deserve the very best when it comes to flavour, freshness and quality. World class facilities process and preserve the seafood so as to ensure that each and every one of our products are export quality, which is the best quality of food you would find in the market. Strict quality control measures are followed including HACCP regulations while processing, as well as quick freezing for the seafood to retain freshness. With our fully cleaned out and cut pieces, all you need to do is throw them onto the frying pan, sprinkle some herbs and simply relish the assorted and wondrous flavours of the ocean.
+                            <br>
+                            <br> From ready to prepare curry cuts, delicious and juicy fish steaks, to crunchy squid rings, if you consider yourself a connoisseur of fine dishes, especially of seafood, then rest assured, Frescamer is your next favorite chef.</p>
                     </div>
                 </div>
-
 
             </div>
         </div>
@@ -81,20 +83,42 @@
         <div class=footer>
             <div class="pair ">
                 <div class="footerLinks ">
-                    <h3>LINKS</h3><br>
-                    <a href="../ ">Home</a><br>
-                    <a href="../product/ ">Products</a><br>
-                    <a href="../recipe/ ">Recipes</a><br>
-                    <a href="../contact/ ">Contact Us</a><br>
-                    <a href="../services/ ">Services</a><br>
-                    <a href="# ">Store Finder</a><br>
-                    <a href="../gallery/ ">Gallery</a><br><br>
+                    <h3>LINKS</h3>
+                    <br>
+                    <a href="../ ">Home</a>
+                    <br>
+                    <a href="../product/ ">Products</a>
+                    <br>
+                    <a href="../recipe/ ">Recipes</a>
+                    <br>
+                    <a href="../contact/ ">Contact Us</a>
+                    <br>
+                    <a href="../services/ ">Services</a>
+                    <br>
+                    <a href="# ">Store Finder</a>
+                    <br>
+                    <a href="../gallery/ ">Gallery</a>
+                    <br>
+                    <br>
                 </div>
                 <div class="footerDetails ">
-                    <h3>ADDRESS</h3><br>
-                    <p>dolore magna aliqua<br>minim veniam<br>consectetur<br><br><br></p>
-                    <h3>CONTACT US</h3><br>
-                    <p>dolore magna aliqua<br>minim veniam<br>consectetur<br><br></p>
+                    <h3>ADDRESS</h3>
+                    <br>
+                    <p>dolore magna aliqua
+                        <br>minim veniam
+                        <br>consectetur
+                        <br>
+                        <br>
+                        <br>
+                    </p>
+                    <h3>CONTACT US</h3>
+                    <br>
+                    <p>dolore magna aliqua
+                        <br>minim veniam
+                        <br>consectetur
+                        <br>
+                        <br>
+                    </p>
                 </div>
             </div>
             Frescamer | Powered by Excel 2019
