--- a/contact/index.html
+++ b/contact/index.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Barlow|Montserrat|PT+Sans+Narrow&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Proza+Libre&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -31,7 +32,6 @@
                         <li><a href="../">Home</a></li>
                         <li><a href="../product/">Products</a></li>
                         <li><a href="../recipe/">Recipes</a></li>
-                        <li><a href="../about/">About Us</a></li>
                         <li><a href="../contact/">Contact Us</a></li>
                         <li><a href="../gallery/">Gallery</a></li>
                     </ul>
@@ -46,7 +46,6 @@
             <a href="../">Home</a>
             <a href="../product/">Products</a>
             <a href="../recipe/">Recipes</a>
-            <a href="../about/">About Us</a>
             <a href="../contact/">Contact Us</a>
             <a href="../gallery/">Gallery</a>
 
@@ -54,7 +53,7 @@
         <div class="container">
 
             <div class="pair">
-                <div class="contact_info" style="font-family: 'Proza Libre', sans-serif;">
+                <div class="contact_info" style="font-family: 'Dancing Script', cursive;">
                     <h2>Contact info</h2><small>For further enquiries or clarifications, please contact.... <br><br>
                     </small><a href="tel:+9865327410" style="font-size: 19px;"><i class="fa fa-phone"
                             aria-hidden="true"></i> 9865327410</a><br><br>
@@ -65,7 +64,9 @@
                         <p>Rajkamal Palakal,<br>Nettepadam lane,<br>Kochi-682016<br>Kerala, India<br><br><br></p>
                     </a><br><br>
                     <div class="order">
-                          <a href="https://docs.google.com/forms/d/e/1FAIpQLSeNGTP-bFjNvQOtyKkEkmGJMwsUVYH1IrROEZyC0hu6ypxwrQ/viewform?usp=sf_link"><p style="color: white">Order Now</p></a>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeNGTP-bFjNvQOtyKkEkmGJMwsUVYH1IrROEZyC0hu6ypxwrQ/viewform?usp=sf_link">
+                            <p style="color: white">Order Now</p>
+                        </a>
 
                     </div>
 
