--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Barlow|Montserrat|PT+Sans+Narrow&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Proza+Libre&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
@@ -50,7 +51,6 @@
                         <li><a href="">Home</a></li>
                         <li><a href="product/">Products</a></li>
                         <li><a href="recipe/">Recipes</a></li>
-                        <li><a href="about/">About Us</a></li>
                         <li><a href="contact/">Contact Us</a></li>
                         <li><a href="gallery/">Gallery</a></li>
                     </ul>
@@ -76,7 +76,6 @@
             <a href="">Home</a>
             <a href="product/">Products</a>
             <a href="recipe/">Recipes</a>
-            <a href="about/">About Us</a>
             <a href="contact/">Contact Us</a>
             <a href="gallery/">Gallery</a>
 
@@ -90,26 +89,48 @@
             }, 5000);
         </script>
 
-        <div class="tbox" data-aos="fade-up" data-aos-duration="2000">
+        <div class="tbox" style="background-color: transparent;box-shadow:none; margin: 0px auto 0px auto;" data-aos="fade-up" data-aos-duration="2000">
             <div class="bootstrap-iso pair">
                 <div class="row ">
                     <div class="card-deck">
-                        <div class="card col-sm-3" style="background-color:transparent; margin: 20px 0px 50px 0px;"><img src="./static/images/1.png" width="90" height="90" /><br><br>
+                        <div class="card col-sm-3" style="background-color:transparent; margin: 20px 0px 50px 0px;"><img src="./static/images/f1.png" width="120" height="90" /><br><br>
                             <!-- <h1 id="cursive">Stay Clean, Stay Green</h1> -->
                             Sustainable and eco-friendly practices are used in order to minimise the impact on the environment.
                         </div>
-                        <div class="card col-sm-3" style="background-color:transparent; margin: 20px 0px 50px 0px;"><img src="./static/images/2.png" width="90" height="90" /><br><br>
+                        <div class="card col-sm-3" style="background-color:transparent; margin: 20px 0px 50px 0px;"><img src="./static/images/f2.png" width="120" height="90" /><br><br>
                             <!-- <h1 id="cursive">Safe and reliable</h1> -->
                             The food we bring to your plates is packaged in 100% tried and tested food grade packaging.
                         </div>
-                        <div class="card col-sm-3" style="background-color:transparent; margin: 20px 0px 50px 0px;"><img src="./static/images/3.png" width="90" height="90" /><br><br>
+                        <div class="card col-sm-3" style="background-color:transparent; margin: 20px 0px 50px 0px;"><img src="./static/images/f3.png" width="120" height="90" /><br><br>
                             <!-- <h1 id="cursive">Quality Assured</h1> -->
                             Each and every seafood product marketed at Frescamer undergoes strict lab tests and quick freezing to ensure the highest quality.</div>
-                        <div class="card col-sm-3" style="background-color:transparent; margin: 20px 0px 30px 0px;"><img src="./static/images/4.png" width="90" height="90" /><br><br>
+                        <div class="card col-sm-3" style="background-color:transparent; margin: 20px 0px 30px 0px;"><img src="./static/images/f4.png" width="120" height="90" /><br><br>
                             <!-- <h1 id="cursive">100% Healthy</h1> -->
                             The HACCP regulations followed while processing provide a clean environment and make sure every product is 100% free of impurities.</div>
                     </div>
                 </div>
+            </div>
+        </div>
+
+        <div class="row" data-aos="fade-up" data-aos-duration="1000">
+            <div id="main">
+
+                <h1 style="text-align: center"> <b>We are Frescamer </b>
+                </h1>
+
+                <div>
+                    <div><img src="static/images/image.jpg" class="imgSide" alt="">
+
+                        <p>We at Frescamer believe that each and every one of you deserve the very best when it comes to flavour, freshness and quality. World class facilities process and preserve the seafood so as to ensure that each and every one of our
+                            products are export quality, which is the best quality of food you would find in the market. Strict quality control measures are followed including HACCP regulations while processing, as well as quick freezing for the seafood
+                            to retain freshness. With our fully cleaned out and cut pieces, all you need to do is throw them onto the frying pan, sprinkle some herbs and simply relish the assorted and wondrous flavours of the ocean.
+                            <br>
+                            <br> From ready to prepare curry cuts, delicious and juicy fish steaks, to crunchy squid rings, if you consider yourself a connoisseur of fine dishes, especially of seafood, then rest assured, Frescamer is your next favorite
+                            chef.
+                        </p>
+                    </div>
+                </div>
+
             </div>
         </div>
         <br><br><br>
