--- a/product/index.html
+++ b/product/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Barlow|Montserrat|PT+Sans+Narrow&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Proza+Libre&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href='./style/style.css'>
     <link rel="stylesheet" href='../static/assets/global.css'>
@@ -33,7 +34,6 @@
                         <li><a href="../">Home</a></li>
                         <li><a href="../product/">Products</a></li>
                         <li><a href="../recipe/">Recipes</a></li>
-                        <li><a href="../about/">About Us</a></li>
                         <li><a href="../contact/">Contact Us</a></li>
                         <li><a href="../gallery/">Gallery</a></li>
                     </ul>
@@ -50,7 +50,6 @@
         <a href="../">Home</a>
         <a href="../product/">Products</a>
         <a href="../recipe/">Recipes</a>
-        <a href="../about/">About Us</a>
         <a href="../contact/">Contact Us</a>
         <a href="../gallery/">Gallery</a>
 
