--- a/index.html
+++ b/index.html
@@ -93,18 +93,18 @@
             <div class="bootstrap-iso pair">
                 <div class="row ">
                     <div class="card-deck">
-                        <div class="card col-sm-3" style="background-color:transparent; margin: 20px 0px 50px 0px;"><img src="./static/images/f1.png" width="120" height="90" /><br><br>
+                        <div class="card col-sm-3" style="background-color:transparent; margin: 20px 0px 50px 0px;"><img src="./static/images/f1.png" height="90" /><br><br>
                             <!-- <h1 id="cursive">Stay Clean, Stay Green</h1> -->
                             Sustainable and eco-friendly practices are used in order to minimise the impact on the environment.
                         </div>
-                        <div class="card col-sm-3" style="background-color:transparent; margin: 20px 0px 50px 0px;"><img src="./static/images/f2.png" width="120" height="90" /><br><br>
+                        <div class="card col-sm-3" style="background-color:transparent; margin: 20px 0px 50px 0px;"><img src="./static/images/f2.png" height="90" /><br><br>
                             <!-- <h1 id="cursive">Safe and reliable</h1> -->
                             The food we bring to your plates is packaged in 100% tried and tested food grade packaging.
                         </div>
-                        <div class="card col-sm-3" style="background-color:transparent; margin: 20px 0px 50px 0px;"><img src="./static/images/f3.png" width="120" height="90" /><br><br>
+                        <div class="card col-sm-3" style="background-color:transparent; margin: 20px 0px 50px 0px;"><img src="./static/images/f3.png" height="90" /><br><br>
                             <!-- <h1 id="cursive">Quality Assured</h1> -->
                             Each and every seafood product marketed at Frescamer undergoes strict lab tests and quick freezing to ensure the highest quality.</div>
-                        <div class="card col-sm-3" style="background-color:transparent; margin: 20px 0px 30px 0px;"><img src="./static/images/f4.png" width="120" height="90" /><br><br>
+                        <div class="card col-sm-3" style="background-color:transparent; margin: 20px 0px 30px 0px;"><img src="./static/images/f4.png" height="90" /><br><br>
                             <!-- <h1 id="cursive">100% Healthy</h1> -->
                             The HACCP regulations followed while processing provide a clean environment and make sure every product is 100% free of impurities.</div>
                     </div>
