--- a/index.html
+++ b/index.html
@@ -111,10 +111,9 @@
                 </div>
             </div>
         </div>
-
         <div class="row" data-aos="fade-up" data-aos-duration="1000">
+            <div><img src="static/assets/back-packaging.png" class="imageover" /></div>
             <div id="main">
-
                 <h1 style="text-align: center"> <b>We are Frescamer </b>
                 </h1>
 
