Changed Background image and content

--- a/index.html
+++ b/index.html
@@ -103,10 +103,11 @@
                         </div>
                         <div class="card col-sm-3" style="background-color:transparent; margin: 20px 0px 50px 0px;"><img src="./static/images/f3.png" height="90" /><br><br>
                             <!-- <h1 id="cursive">Quality Assured</h1> -->
-                            Each and every seafood product marketed at Frescamer undergoes strict lab tests and quick freezing to ensure the highest quality.</div>
+                            Strict lab tests and quick freezing for each and every product ensures the highest quality possible. </div>
                         <div class="card col-sm-3" style="background-color:transparent; margin: 20px 0px 30px 0px;"><img src="./static/images/f4.png" height="90" /><br><br>
                             <!-- <h1 id="cursive">100% Healthy</h1> -->
-                            The HACCP regulations followed while processing provide a clean environment and make sure every product is 100% free of impurities.</div>
+                            HACCP regulations are followed while processing, in order to provide a clean impurity-free environment.
+</div>
                     </div>
                 </div>
             </div>
@@ -126,6 +127,8 @@
                             <br>
                             <br> From ready to prepare curry cuts, delicious and juicy fish steaks, to crunchy squid rings, if you consider yourself a connoisseur of fine dishes, especially of seafood, then rest assured, Frescamer is your next favorite
                             chef.
+                            <br>
+                            Team Frescamer
                         </p>
                     </div>
                 </div>
