--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 </head>
 
-<body style="background-image: url(./static/assets/fresbg2.jpg">
+<body>
     <!-- <div class="blur-background"></div> -->
 
 
