--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                             chef.
                             <br>
                             <br>
-                            Team Frescamer
+                            -Team Frescamer
                         </p>
                     </div>
                 </div>
