--- a/contact/index.html
+++ b/contact/index.html
@@ -54,7 +54,7 @@
 
             <div class="pair">
                 <div class="contact_info" style="font-family: 'Dancing Script', cursive;">
-                    <h2>Contact info</h2><small>For further enquiries or clarifications, please contact.... <br><br>
+                    <h2>Contact info</h2><small>For further enquiries or clarifications, please contact: <br><br>
                     </small><a href="tel:+9865327410" style="font-size: 19px;"><i class="fa fa-phone"
                             aria-hidden="true"></i> 9865327410</a><br><br>
                     <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=info@frescamer.com" style="font-size: 19px;"><i class="fa fa-envelope"
