--- a/gallery/index.html
+++ b/gallery/index.html
@@ -53,7 +53,7 @@
 
         </div>
         <div id="box">
-            <h1 id="pro">GALLERY</h1>
+            <h1>Gallery</h1>
 
             <div id="cardMain" style="display : none">
                 <div class="prodImgMain">
