--- a/gallery/index.html
+++ b/gallery/index.html
@@ -52,15 +52,14 @@
             <a href="../gallery/">Gallery</a>
 
         </div>
-        <div id="box">
-            <h1>Gallery</h1>
-
-            <div id="cardMain" style="display : none">
-                <div class="prodImgMain">
-                    <div id="close"></div>
+        <div class="gallerytopbox">
+            <div class='bannerImage overlay'><img src='../static/images/s1.jpg'>
+                <div class="centered">
+                    <h1>GALLERY</h1>
                 </div>
             </div>
-
+        </div>
+        <div id="box">
 
             <div class="cardRow">
                 <div class="card">
